--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     </style>
 </head>
 <body>
-    <h1>Countdown to October 17, 2025</h1>
+    <h1>Countdown until BFDI:TPOT 20 releases on YouTube.</h1>
+    <h2>(BFDI:TPOT 20 releases on YouTube on October 17th, 2025)</h2>
     <div class="timer" id="countdown"></div>
     <script>
         function updateCountdown() {
