--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background: #222;
+            background-image: url(https://ih1.redbubble.net/image.1323678978.5728/flat,750x,075,f-pad,750x1000,f8f8f8.jpg);
             color: #fff;
             display: flex;
             flex-direction: column;
