changed text to black

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             background-image: url(https://ih1.redbubble.net/image.1323678978.5728/flat,750x,075,f-pad,750x1000,f8f8f8.jpg);
-            color: #fff;
+            color: #000;
             display: flex;
             flex-direction: column;
             align-items: center;
