--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
             font-family: Arial, sans-serif;
             background-image: url(https://ih1.redbubble.net/image.1323678978.5728/flat,750x,075,f-pad,750x1000,f8f8f8.jpg);
             color: #000;
+            font-weight: bold;
             display: flex;
             flex-direction: column;
             align-items: center;
