--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
             align-items: center;
             justify-content: center;
             height: 100vh;
+            text-shadow:
+                       -1x -1px 0 white, /* Top-left shadow */
+                            1px -1px 0 white,  /* Top-right shadow */
+                                -1px 1px 0 white,  /* Bottom-left shadow */
+                                    1px 1px 0 white;   /* Bottom-right shadow */
+                                    }
+            }
         }
         .timer {
             font-size: 2.5em;
