--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         .text {
             background-color: #222;
             border-radius: 7px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
         }
     </style>
 </head>
