--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Countdown Timer</title>
+    <meta name="google-site-verification" content="XJQD0Qm1Ou4uZKdQ1_9JK_hiF00r9bL4D-VAMt4kqGY" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
+    <title>When is BFDI:TPOT 20? YouTube Release Date Countdown</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
+            font-family: "Manrope", sans-serif;
             background-image: url(https://ih1.redbubble.net/image.1323678978.5728/flat,750x,075,f-pad,750x1000,f8f8f8.jpg);
             color: #fff;
             font-weight: bold;
@@ -21,7 +25,7 @@
             margin-top: 20px;
         }
         .text {
-            background-color: #222;
+            background-color: #333;
             border-radius: 20px;
             display: flex;
             flex-direction: column;
